--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,700|Delius+Unicase:700|Lobster" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,700|Delius+Unicase:700|" rel="stylesheet">
 </head>
 <body>
 
   <header class="masthead text-center island-1-2">
     <div class="push-1-2">
-      <img class="logo valign-middle" src="images/snail.svg" alt="">
-      <h1 class="ib valign-middle push-0 yotta">Snails</h1>
+      <img class="logo align-middle" src="images/snail.svg" alt="">
+      <h1 class="ib align-middle push-0 yotta">Snails</h1>
     </div>
     <nav>
       <ol class="nav list-group-inline push-0 giga">
@@ -93,6 +93,5 @@
     </div>
   </footer>
 
-  <script src="http://deelay.me/1000/https://assets.learn-the-web.algonquindesign.ca/web-dev-3/fastness-fixer-tracking-script/tracker.js"></script>
 </body>
 </html>
