--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <header class="masthead text-center island-1-2">
     <div class="push-1-2">
-      <img class="logo align-middle" src="images/snail.svg" alt="">
-      <h1 class="ib align-middle push-0 yotta">Snails</h1>
+      <img class="logo valign-middle" src="images/snail.svg" alt="">
+      <h1 class="ib valign-middle push-0 yotta">Snails</h1>
     </div>
     <nav>
       <ol class="nav list-group-inline push-0 giga">
@@ -42,7 +42,7 @@
     </div>
 
     <div class="embed embed-3by2 push">
-      <img class="embed-item" src="images/snail-1.jpg" alt="">
+      <img class="embed-item" src="images/snail.jpg" alt="">
     </div>
 
     <div class="gutter-1-2 max-length">
